--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,15 @@
 duckduckgo_search==5.3.1b1
 einops
 fastapi
-beautifulsoup4
-#git+https://github.com/InternLM/lagent.git
-#gradio
+gradio
 janus
-#lmdeploy
-# lmdeploy==0.2.3
-# vllm
+lmdeploy
 pyvis
 sse-starlette
 termcolor
+transformers==4.41.0
 uvicorn
+# lagent
 arxiv
 distro
 filelock
@@ -19,10 +17,20 @@ func_timeout
 griffe
 json5
 jsonschema
-#jupyter
-#jupyter_client
+jupyter
+jupyter_client
 phx-class-registry
 requests
 streamlit
 tiktoken
 timeout-decorator
+typing-extensions
+
+google-search-results
+lmdeploy>=0.2.3
+pillow
+python-pptx
+timeout_decorator
+torch
+transformers>=4.34
+vllm>=0.3.3
